xx xxx 2006: 0.2.6 Miek <miek@miek.nl>
   -- whatever --
   * more signal handling was added to the shell scripts, 
     they now echo what file they were processing.
     

18 Mar 2006: 0.2.5 Miek <miek@miek.nl>
   -- bugfixes --
   * usbdump.sh: be more informative on failed backups
   * error messages cleanup
   * indent is used to force coding style
   * added purge.sh script for deleting older backups
   * dump.sh and purge.sh now both have a manual page
     and are moved to the tools/ directory
   * patch for mirror.sh (add missing $) (Pavel Mracek)
   * Makefile cleanup


10 Mar 2006: 0.2.4 Miek <miek@miek.nl>
   -- bugfixes --
   * crawler.c: when finding .nobackup don't remove the parent directory
     (this keep 'dir' and 'dir/.nobackup' in the backup
   * mirror.sh: use chown -h for symlinks
   * mirorr.sh: mirror_suffix() use +DD.HH:MM again (Graham King)
   * dump.sh: create the top level backup dirs with 755
   * all scripts: enabled set -o nounset, to catch unbound vars


02 Mar 2006: 0.2.3 Miek <miek@miek.nl>
   -- features and bugfixes --
   * gfunc.c: bug, close files when catting them in cat().
   * gfunc.c: bug, size check should come before switch.
   * crawler.c: bug, use DIR_SEP everywhere
   * crawler.c: removed the filestack, and added files
     directly to the tree, this eliminates half a the
     mallocs, cutting down on rdup's memory req. 
     It is not faster (rdup is I/O bound)
   * rdup.c: removed the printing of directories when finished.
   * rdup.c: -vv now prints the processed files to standard error.
     (Usefull when doing a remote backup)
   * scripts: Added gzip.sh + manual page
   * scripts: Added crypt.sh + manual page
   * scripts: Removed zipped/crypt feature from mirror,
     use rdup -c | crypt.sh | mirror -c 
   * scripts: Simplified yesterday.sh and hist.sh
   * scripts: Added -d switch to hist.sh
   * scripts: The default algorithm for encryption is set 
     to blowfish - if you want to change this you'll